--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="/css/ratingStarability.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="../icons/airbnbIcon.png" type="image/x-icon"> <!-- linking website's logo-->
 
 <!-- Styling for google maps -->
-<link rel="stylesheet" href="/css/mapStyling.css">
+
 
 
 
